# concord

./: Project-description-v0.1.odt  Project-description-v0.2.odt  README.md  Team_PERT.drawio  hr_gantt-team.xlsx  test.txt
backend/: .gitignore  pyproject.toml
backend/scripts/: insert_sample_data.py  setup_db.py
backend/server/: Activity.py  ActivityList.py  Attribute.py  AttributeList.py  Commendations.py  Group.py  GroupList.py  Matchmaking.py  User.py  schemas.py
backend/server/api/: main.py  schemas.py
backend/server/database/: concord_db.db  concord_db.sql  connect.py  connection.py  schema.sql
backend/server/models/: group_model.py  user_model.py
client/: README.md  package-lock.json  package.json  tailwind.config.js
client/public/: index.html
client/src/: App.js  App.jsx  index.css
client/src/hooks/: useDisclosure.js
server/: ActivitiesList.py  Activity.py  Attribute.py  AttributesList.py  Chat.py  Commendations.py  Dialogue.py  Group.py  GroupsList.py  LinkHandler.py  Matchmaking.py  Pipfile  Screen.py  User.py  UsersList.py
server/server/: Activity.py  ActivityList.py  Chat.py  Group.py  GroupList.py  User.py  UserList.py
server/src/: Activity.py  ActivityList.py  Attribute.py  AttributeList.py  AttributesList.py  Chat.py  Commendations.py  Dialogue.py  Group.py  GroupList.py  GroupsList.py  LinkHandler.py  Matchmaking.py  Screen.py  User.py  UserList.py  UsersList.py  api.py  schemas.py
technical-documents/: Domain model diagram.drawio  Project_PERT.drawio  domain model v0.1.drawio  hr_gantt-project.xlsx  project-gantt-v0.2.xlsx
(+32 files in other folders)
